--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -286,16 +286,19 @@ Do not reuse saved build options if running with
 .B
 -p|--compat32
 .RS
-Create a -compat32 package on multilib x86_64 systems.
+Create a
+.I
+compat32
+package on multilib x86_64 systems.
 This requires the
 .B
 compat32-tools
 package by Eric Hameleers. Please note that this operation
 is not necessarily foolproof, and is unsupported by anyone
-in principle. As a best practice,
+in principle.
 .B
 --compat32
-should be combined with
+can be combined with
 .B
 --noinstall
 and
@@ -406,7 +409,7 @@ packages on
 .B
 x86_64
 machines and
-.B
+.I
 compat32
 packages.
 .B
@@ -414,9 +417,12 @@ sboupgrade
 does not require
 .B
 ARCH
-to build compat32 packages. This process is not necessarily bug-free;
+to build
+.I
+compat32
+packages. This process is not necessarily bug-free;
 please do not hesitate to report
-.B
+.I
 compat32
 issues.
 .RE
