compat32 and base scripts share saved build options

--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -59,8 +59,11 @@ build options used are saved to
 /var/log/sbotools
 when the SlackBuild runs.
 .P
-Please note that saved build options are not displayed
-when
+.I
+compat32
+packages share saved build options with the corresponding
+base script. Please note that saved build options are not
+displayed when
 .B
 CLASSIC
 is set to
