--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Readme 3"
-.TH SBO::Lib::Readme 3 "Setting Orange, Discord 2, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib::Readme 3 "Sweetmorn, Discord 3, 3191 YOLD" "" "sbotools 3.4.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -78,7 +78,8 @@ SBO::Lib::Readme \- Routines for interacting with a typical SBo README file.
 .Ve
 .PP
 \&\f(CWask_opts()\fR asks if options should be set. If no options are set, it returns \f(CW\*(C`undef\*(C'\fR.
-Saved options under \f(CW\*(C`/var/log/sbotools/$sbo\*(C'\fR are retrieved and can be used again.
+Saved options under \f(CW\*(C`/var/log/sbotools/$sbo\*(C'\fR are retrieved and can be used again. For
+\&\f(CW\*(C`compat32\*(C'\fR packages, saved options are shared with the base script.
 .SS ask_other_readmes
 .IX Subsection "ask_other_readmes"
 .Vb 1
