sboinstall.1: Move 'future version' note to the right place.

--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -405,10 +405,11 @@ _SBo
 SlackBuilds except for
 .I
 compat32
-builds. This is generally only useful when the Slackware version
-has been upgraded or (occasionally) on -current. Additional
-SlackBuilds may be installed when dependencies have been
-added. If dependencies are installed with tags other than
+builds (likely to change in a future version). This is generally
+only useful when the Slackware version has been upgraded or
+(occasionally) on -current. Additional SlackBuilds may be
+installed when dependencies have been added. If dependencies are
+installed with tags other than
 .I
 _SBo\fR\
 \&, or with no tag, a warning message (default \(lqno\(rq)
@@ -425,8 +426,8 @@ In combination with
 --reverse-rebuild\fR\
 \&,
 .B
---compat32
-(likely to change in a future version),
+--compat32\fR\
+\&,
 .B
 --use-template
 and
