--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -100,7 +100,7 @@ file, or with unfamiliar scripts, can potentially lead to unwanted results. Cons
 passing
 .B
 --dry-run
-first, which prints the build queue and exits.
+first, which prints the build queue with other information and exits.
 
 For details about all configuration options in
 .I
