man1, man5: Light editing.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -16,7 +16,7 @@ sbocheck [-g|-n]
 .P
 .B
 sbocheck
-first updates or fetches a copy of the
+updates or fetches a copy of the
 .B
 SlackBuilds.org
 tree, checks for available upgrades, and reports what it finds.
@@ -37,7 +37,7 @@ CLASSIC
 mode, scripts in the report that would not be upgraded by
 .B
 sboupgrade(1)
-are marked with an equals sign.
+are marked with
 .B
 =
 (equals sign).
