--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -35,7 +35,7 @@ $TMP\fR\
 (or
 .I
 $TMP\fR\
-\&). Note that if not run with the
+\&). Note that if run without the
 .B
 --interactive
 flag,
@@ -138,10 +138,10 @@ can exit with the following codes:
 0: all operations completed successfully.
 .RE
 .RS
-1: a usage error occurred, such as running
+1: a usage error occurred, such as passing incorrect options to
 .B
-sboclean
-with nothing to clean.
+sboclean\fR\
+\&.
 .RE
 
 .SH BUGS
