--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -104,7 +104,7 @@ are not included.
 .B
 -q|--queue
 .RS
-Show the build queue for each SlackBuild found, given the contents
+Show the build queue for each SlackBuild found given the contents
 of
 .I
 /etc/sbotools/sbotools.hints\fR\
@@ -120,10 +120,10 @@ can exit with the following codes:
 0: all operations were succesful.
 .RE
 .RS
-1: a usage error occured (e.g.,
+1: a usage error occured (e.g., incorrect options were passed to
 .B
 sbofind
-ran with nothing to find)
+).
 .RE
 .RS
 6:
