--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -164,9 +164,8 @@ flag can be used without root privileges.
 .RS
 Return the current blacklist, optional dependency and automatic
 reverse dependency rebuild status for one or more scripts. There
-is no output unless the queried script is blacklisted, has optional
-dependency requests, is on an optional dependency request list, or
-has automatic reverse dependency rebuilds. The
+is no output unless the queried script is involved with one or more
+hints. The
 .B
 --query
 flag can be used without root privileges.
