--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -17,8 +17,8 @@ sboupgrade [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] \\
 sboupgrade
 is used to upgrade SlackBuilds. If the
 .B
--r
-flag is not specified,
+--nointeractive
+flag is not present,
 .B
 sboupgrade
 pulls the list of requirements from the
@@ -473,7 +473,7 @@ build queue and exit.
 --dry-run
 reports SlackBuilds in the queue with
 .I
-%%README%%
+%README%
 in
 .I
 REQUIRES\fR\
