--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -72,7 +72,7 @@ DISTCLEAN=(FALSE|TRUE)
 If
 .B
 TRUE\fR\
-\&, then remove the package and source archives after building. Source
+\&, remove the package and source archives after building. Source
 archives are otherwise retained in md5sum-designated directories under
 .I
 /usr/sbo/distfiles
