--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -187,7 +187,7 @@ DISTCLEAN\fR\
 \&: If
 .B
 TRUE\fR\
-\&, then remove the package and source archives after building. Source
+\&, remove the package and source archives after building. Source
 archives are otherwise retained in md5sum-designated directories under
 .I
 /usr/sbo/distfiles
@@ -252,7 +252,7 @@ is run.
 .RS
 .B
 CPAN_IGNORE\fR\
-\&: if
+\&: If
 .B
 TRUE\fR\
 \&, install scripts even if they are already installed from the CPAN.
