--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,4 +1,4 @@
-.TH sboconfig 1 "Pungenday, Chaos 38, 3191 YOLD" "sbotools 3.4.2" sbotools
+.TH sboconfig 1 "Pungenday, Discord 5, 3191 YOLD - Mojoday" "sbotools 3.5_RC" sbotools
 .SH NAME
 .P
 .B
