--- a/man3/SBO::Lib::Download.3
+++ b/man3/SBO::Lib::Download.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Download 3"
-.TH SBO::Lib::Download 3 "Pungenday, Chaos 38, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib::Download 3 "Pungenday, Discord 5, 3191 YOLD - Mojoday" "" "sbotools 3.5_RC"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
