--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Readme 3"
-.TH SBO::Lib::Readme 3 "Boomtime, Discord 4, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib::Readme 3 "Pungenday, Discord 5, 3191 YOLD - Mojoday" "" "sbotools 3.5_RC"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -122,7 +122,7 @@ its contents. On error, it returns \f(CW\*(C`undef\*(C'\fR.
 .PP
 \&\f(CWget_user_group()\fR searches the \f(CW$readme\fR in \f(CW$location\fR for \f(CW\*(C`useradd\*(C'\fR and
 \&\f(CW\*(C`groupadd\*(C'\fR commands, and returns them in an array reference. If no
-commands are found initially, it searches other \f(CW\*(C`README*\*(C'\fR files for
+commands are found initially, it searches any other \f(CW\*(C`README*\*(C'\fR files for
 them.
 .SS user_group_exist
 .IX Subsection "user_group_exist"
