--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -29,8 +29,7 @@ operation over all dependencies.
 .B
 sboupgrade
 offers to install any non-installed dependencies in
-the build queue, taking blacklisted scripts and optional
-dependency specifications in
+the build queue, taking the hints in
 .B
 sbotools.hints(5)
 into account. If circular dependencies are detected, the
