--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -35,8 +35,7 @@ operation over all dependencies.
 .B
 sboinstall
 offers to install any non-installed dependencies in
-the build queue, taking blacklisted scripts and optional dependency
-specifications in
+the build queue, taking the hints in
 .B
 sbotools.hints(5)
 into account. In case of
