sbo{install,upgrade}: Improve the compat32 skip process.

--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -281,6 +281,21 @@ and
 --distclean FALSE
 so that the contents of the package can be inspected prior
 to installation. GitHub Issues are welcome in case of unexpected failure.
+
+.B
+sboinstall
+will not attempt
+.I
+compat32 builds for Perl-based or
+.I
+noarch
+scripts. Incompatible with
+.B
+--mass-rebuild
+and
+.B
+--use-template\fR\
+\&.
 .RE
 .P
 .B
