--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -315,7 +315,15 @@ and
 --distclean FALSE
 so that the contents of the package can be inspected prior
 to installation. GitHub Issues are welcome in case of unexpected failure.
-Incompatible with
+
+.B
+sboinstall
+will not attempt
+.I
+compat32 builds for Perl-based or
+.I
+noarch
+scripts. Incompatible with
 .B
 --all\fR\
 \&.
