sbo{install,upgrade}.1: Fix typo.

--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -320,7 +320,8 @@ to installation. GitHub Issues are welcome in case of unexpected failure.
 sboinstall
 will not attempt
 .I
-compat32 builds for Perl-based or
+compat32
+builds for Perl-based or
 .I
 noarch
 scripts. Incompatible with
