--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -9,14 +9,14 @@ sboinstall
 sboinstall [-h|-v]
 .P
 sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] \\
-           [-iopRr] [--batch|--dry-run] [--create-template FILE] \\
+           [-DiopRr] [--batch|--dry-run] [--create-template FILE] \\
            sbo_name (sbo_name)
 .P
 sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] \\
-           [-i] --use-template FILE
+           [-Di] --use-template FILE
 .P
 sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] \\
-           [-ioqr] [--create-template FILE] --mass-rebuild
+           [-Dioqr] [--create-template FILE] --mass-rebuild
 .SH DESCRIPTION
 .P
 .B
@@ -134,7 +134,10 @@ Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .P
 Root privileges are required to run
 .B
-sboinstall\fR\
+sboinstall
+unless passing
+.B
+--dry-run\fR\
 \&. If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
@@ -178,6 +181,33 @@ command. See also
 .B
 sbotools.conf(5)\fR\
 \&. This option overrides the default.
+.RE
+.P
+.B
+-D|--dry-run
+.RS
+Non-interactively print the prospective build queue and exit.
+.B
+--dry-run
+reports SlackBuilds in the queue with
+.I
+%README%
+in
+.I
+REQUIRES\fR\
+\&, saved build options to be used and
+.B
+useradd
+or
+.B
+groupadd
+commands to be run. This makes
+.B
+--batch
+considerably safer for everyday use.
+.B
+--dry-run
+can be used without root privileges.
 .RE
 .P
 .B
@@ -524,32 +554,6 @@ and overrides
 .B
 --nointeractive\fR\
 \&.
-.RE
-.P
-.B
---dry-run
-.RS
-Non-interactively print the
-.B
---batch
-build queue and exit.
-.B
---dry-run
-reports SlackBuilds in the queue with
-.I
-%README%
-in
-.I
-REQUIRES\fR\
-\&, saved build options to be used and
-.B
-useradd
-or
-.B
-groupadd commands to be run. This makes
-.B
---batch
-considerably safer for everyday use.
 .RE
 .SH VARIABLES
 .P
