--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -1,4 +1,4 @@
-.TH sbotools 1 "Pungenday, Discord 5, 3191 YOLD - Mojoday" "sbotools 3.5_RC" sbotools
+.TH sbotools 1 "Setting Orange, Discord 12, 3191 YOLD" "sbotools 3.5" sbotools
 .SH NAME
 .P
 .B
