--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Pungenday, Discord 5, 3191 YOLD - Mojoday" "sbotools 3.5_RC" sbotools
+.TH sbotools.conf 5 "Setting Orange, Discord 12, 3191 YOLD" "sbotools 3.5" sbotools
 .SH NAME
 .P
 .B
